# left4dead2-server

./: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  base.Dockerfile  entrypoint.sh  server.cfg
.github/workflows/: docker-publish.yml  publish.yml
